create a post api for requisition form to submit all data in differnent table
